--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,9 @@ nav {
     width: 100%;
     background: #fff;
     overflow: hidden;
+    /*position: fixed;*/
+    top: 0px;
+  
 }
 
     nav a {
@@ -122,6 +125,7 @@ nav {
         nav a:hover, nav a:focus {
             background-color: #cdc9c5;
         }
+
 
 #layout {
     width: 100%;
@@ -177,6 +181,40 @@ legend {
             position: absolute;
             top: 50px;
         }
+
+    #mobilmenu {
+        display: inline-block;
+        cursor: pointer;
+        position: absolute;
+        top: 50px;
+        right: 10px;
+    }
+
+    .mobilmenurader {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+
+    /* Rotate first bar */
+    .change .mobilmenurad1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+    }
+
+    /* Fade out the second bar */
+    .change .mobilmenurad2 {
+        opacity: 0;
+    }
+
+    /* Rotate last bar */
+    .change .mobilmenurad3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
+    }
+
    
     nav a {
         font-size: 1.6em;
@@ -289,6 +327,10 @@ legend {
         top: 100px;
     }
 
+    #mobilmenu {
+       display: none;
+    }
+
     nav ul {
         max-width: 66em;
         margin-right: auto;
@@ -307,33 +349,21 @@ legend {
         position: relative;
     }
 
-
-    #valdsida {
-        border-bottom: 2px solid #cdc9c5;
-    }
-
-
-    .statisk {
-        position: static;
-    }
-
     .fixerad {
         position: fixed;
         top: 0;
         left: 0;
     }
 
-    .fixednav {
-        position: fixed;
-        top: 0;
-        left: 0;
+
+    #valdsida {
+        border-bottom: 2px solid #cdc9c5;
     }
 
-    .statisk {
-        position: static;
+    .fixerad + #layout {
+        padding-top: 60px;
     }
 
-    
     #enspalt {
         width: 100%;
         max-width: 63em;
@@ -352,8 +382,7 @@ legend {
         margin: 0px
     }
 
-
-
+    
     main {
         min-height: 700px;
     }
